--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,7 @@ display: flex;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-left: 10px;
 
 }
 
