--- a/src/style.css
+++ b/src/style.css
@@ -151,3 +151,11 @@ display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
+
+
+.button-login-cart{
+    background-color: #007bff;
+    display: flex;
+    justify-content: center;
+}
