--- a/src/style.css
+++ b/src/style.css
@@ -1,161 +1,154 @@
-.product-container{
-display: flex;
+.product-container {
+  display: flex;
 }
 
-.img-container{
-   margin-top: 30px;
+.img-container {
+  margin-top: 30px;
 }
 
-.product-details{
-    margin-top: 30px;
-    padding-left: 100px;
-}
-.category-product-details{
-    display: inline-block;
-    color: white;
-    background-color: grey;
+.product-details {
+  margin-top: 30px;
+  padding-left: 100px;
 }
 
-.product-name{
-    font-weight: bold;
+.category-product-details {
+  display: inline-block;
+  color: white;
+  background-color: grey;
 }
 
-.cart{
-    border-bottom: 2px solid black;
+.product-name {
+  font-weight: bold;
 }
 
-.cart-container{
-    display: flex;
-    margin-top: 10px;
+.cart {
+  border-bottom: 2px solid black;
 }
 
-.cart-container-products{
-    /* border: 2px solid grey; 
+.cart-container {
+  display: flex;
+  margin-top: 10px;
+}
+
+.cart-container-products {
+  /* border: 2px solid grey; 
     border-radius: 6px; */
 }
 
-.cart-container-total{
-    border: 2px solid grey; 
-    border-radius: 6px;
-    width: 300px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 10px;
-
+.cart-container-total {
+  border: 2px solid grey;
+  border-radius: 6px;
+  width: 300px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 10px;
 }
 
-.cart-container-products-titles{
-    width: 700px;
-    display: flex;
-    justify-content: space-evenly;
+.cart-container-products-titles {
+  width: 700px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.cart-container-products-list{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border: 2px solid grey; 
-    border-radius: 6px;
-    margin-top: 10px;
+.cart-container-products-list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 2px solid grey;
+  border-radius: 6px;
+  margin-top: 10px;
 }
 
-.cart-container-total-count{
-    display: flex;
-    justify-content: space-around;
+.cart-container-total-count {
+  display: flex;
+  justify-content: space-around;
 }
-.cart-container-descount{
-    padding-bottom: 10px;
-    border-bottom: 2px dashed grey;
-}
-
-.cart-container-subtotal-count{
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 10px;
-    border-bottom: 2px dashed grey;
+.cart-container-descount {
+  padding-bottom: 10px;
+  border-bottom: 2px dashed grey;
 }
 
-.cart-container-envio{
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 10px;
-    border-bottom: 2px dashed grey;
+.cart-container-subtotal-count {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 10px;
+  border-bottom: 2px dashed grey;
 }
 
-
-.descount-input{
-    display: flex;
-    justify-content: space-around;
+.cart-container-envio {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 10px;
+  border-bottom: 2px dashed grey;
 }
 
-
-
-.button-finish-style{
-    border: none;
-    outline: 0;
-    padding: 12px;
-    cursor: pointer; 
-    width: 100%;
-    font-size: 18px;
-    grid-area: add;
-    align-self: center;
-    justify-self: center
+.descount-input {
+  display: flex;
+  justify-content: space-around;
 }
 
-.compras-container{
-    background-color: lightblue;
-    border: solid 1px grey;
-    border-radius: 4px;
-    margin-top: 10px;
-    
+.button-finish-style {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+  grid-area: add;
+  align-self: center;
+  justify-self: center;
 }
 
-.transaction-container{
-    display: flex;
-    justify-content: space-around;
+.compras-container {
+  background-color: lightblue;
+  border: solid 1px grey;
+  border-radius: 4px;
+  margin-top: 10px;
 }
 
-.transaction-name{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.transaction-container {
+  display: flex;
+  justify-content: space-around;
 }
 
-.transaction-details{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
+.transaction-name {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.transaction-total-state{
-    
+.transaction-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
 }
 
-.transaction-total{
-    margin-top: 10px;
-    font-weight: bold;
+.transaction-total-state {
 }
 
-.transaction-state{
-    margin-top: 10px;
-    display: inline-block;
-    color: white;
-    background-color: grey;
-    border-radius: 3px;
+.transaction-total {
+  margin-top: 10px;
+  font-weight: bold;
 }
 
-.transaction-buttons{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.transaction-state {
+  margin-top: 10px;
+  display: inline-block;
+  color: white;
+  background-color: grey;
+  border-radius: 3px;
 }
 
+.transaction-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-
-.button-login-cart{
-    background-color: #007bff;
-    display: flex;
-    justify-content: center;
+.button-login-cart {
+  background-color: #007bff;
+  display: flex;
+  justify-content: center;
 }
